menu button and expension added

--- a/src/app/footer/footer.scss
+++ b/src/app/footer/footer.scss
@@ -1,7 +1,7 @@
 .footer {
     width: 100vw;
     max-width: 100%;
-    background: #4fa6f7;
+    background: #284fa7;;
     color: #fff;
     padding: 20px
 }
