--- a/src/app/home-content/home.html
+++ b/src/app/home-content/home.html
@@ -1,12 +1,12 @@
 <div class="home">
-    <mat-card class="video-wrapper">
+    <!-- <mat-card class="video-wrapper">
         <video src="https://www.starexuniversity.com/app-assets/vendors/assets/video/1.mp4" autoplay
             [muted]="'muted'"></video>
-    </mat-card>
+    </mat-card> -->
 
-    <div class="home_img">
+    <!-- <div class="home_img">
         <img src="assets/carousel/AI__carousall.webp" alt="Basic Life Support Training Program" class="header_img">
-    </div>
+    </div> -->
 
 <section  id="tranding">
       <div class="container">
