--- a/src/app/school_list/life-science/life-science.html
+++ b/src/app/school_list/life-science/life-science.html
@@ -1,144 +1,54 @@
-<section class="content py50">
-	<div class="container">
+<div class="container flex-column">
+		<h1 class="contentTitle text-center" style="font-size: 1.75rem;">School of Life Sciences </h1>
 		<div class="row">
-			
-			<div class="col-md-12 order-md-2">
-			<h1 class="contentTitle" style="font-size: 1.75rem;">School of Life Sciences </h1>
-			 
-				<p class="mt-2 font-weight-bold font-italic"> </p>
-				<div class="row">
-
-
-                
-					<div class="col-sm-12"> 
-						 <div class="owl-carousel owl-theme gall owl-loaded owl-drag">
-						     
-						 						 							 		   
-						 							 		   
-						 							 		   
-						 							 		   
-						 							 		   
-						 							 		   
-						 							 		   
-						 							 						
-					<div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-520px, 0px, 0px); transition: 0.25s; width: 3640px;"><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
-                                            <img class="w-100 mt-3" src="https://starexuniversity.s3.us-east-2.amazonaws.com/d.jpg
-" alt="">
-                                        </div></div><div class="owl-item active" style="width: 510px; margin-right: 10px;"><div class="item">
-                                            <img class="w-100 mt-3" src="https://starexuniversity.s3.us-east-2.amazonaws.com/a.jpg
-" alt="">
-                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
-                                            <img class="w-100 mt-3" src="https://starexuniversity.s3.us-east-2.amazonaws.com/b.jpg
-" alt="">
-                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
-                                            <img class="w-100 mt-3" src="https://starexuniversity.s3.us-east-2.amazonaws.com/c.jpg
-" alt="">
-                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
-                                            <img class="w-100 mt-3" src="https://starexuniversity.s3.us-east-2.amazonaws.com/f.jpg
-" alt="">
-                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
-                                            <img class="w-100 mt-3" src="https://starexuniversity.s3.us-east-2.amazonaws.com/g-1.jpg
-" alt="">
-                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
-                                            <img class="w-100 mt-3" src="https://starexuniversity.s3.us-east-2.amazonaws.com/h.jpg
-" alt="">
-                                        </div></div></div></div><div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><span aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next">›</span></button></div><div class="owl-dots disabled"></div></div>
-						<div class="row">
-							<div class="col-sm-12">
-								<p>The faculty at the School of Life Sciences aims to raise professionals with a problem solving attitude to improve life with Sciences. The purpose is to develop institutional linkages and implement effective management systems for the promotion and development of Core Botany, Core Zoology, Advanced Biotechnology , Advanced Microbiology. The career options other than teaching include research, Scientists in IARI, NDRI, CCMB, ISRO, BARC, PUSA, CDRI, BSIR, TIFR, CSIR and TISCO and all such concerns. Students can also be Forest Officers, Forensic Officers Environmentalists, Clinical researchers, Veterinary technologists, Wild Life educators/rehabilitators, botanical Garden keeper, Herbal Garden Keeper, Zoologists and&nbsp;Botanists. Microbiologists can work in Dairy industry, Food industry, Pharmaceutical industry, Cosmetic industries, Forensic Scientists etc</p>
-								<div class="table">
-								
-								<table class="table table-bordered">
-									<tbody><tr>
-										<th>Course</th>
-									
-										<th>Duration</th>
-										<th>Eligibility Criteria</th>
-											<th>No. of Seats</th>
-<!--										<th>Semester Fee</th>-->
-									</tr>
-																												    
-										    <tr>
-										     <td>B.Sc. Medical<br>
-	                                         										       </td>
-										   
-											     <td>4 Years</td>
-											     <td>10+2 Pass with PCB with at least 45% Marks</td>
-											       <td>60</td>
-											   <!--  <td><i class='fa fa-inr'></i>27500/-</td>-->
-										      </tr>
-										    									    
-										    <tr>
-										     <td>B.Sc. Forensic Science<br>
-	                                         										       </td>
-										   
-											     <td>4 Years</td>
-											     <td>10+2 Pass with Biology, Mathematics with Chemistry as compulsory subject.</td>
-											       <td>60</td>
-											   <!--  <td><i class='fa fa-inr'></i>30000/-</td>-->
-										      </tr>
-										    									    
-										    <tr>
-										     <td>M.Sc. Botany<br>
-	                                         										       </td>
-										   
-											     <td>2 Years</td>
-											     <td>B.Sc Medical (Botany) with at least 45% Marks</td>
-											       <td>30</td>
-											   <!--  <td><i class='fa fa-inr'></i>27500/-</td>-->
-										      </tr>
-										    									    
-										    <tr>
-										     <td>M.Sc. Zoology<br>
-	                                         										       </td>
-										   
-											     <td>2 Years</td>
-											     <td>B.Sc Medical (Zoology) with at least 45% Marks</td>
-											       <td>30</td>
-											   <!--  <td><i class='fa fa-inr'></i>27500/-</td>-->
-										      </tr>
-										    									    
-										    <tr>
-										     <td>M.Sc. Microbiology<br>
-	                                         										       </td>
-										   
-											     <td>2 Years</td>
-											     <td>B.Sc. in Medical, Biotechnology, Microbiology or any other Branch of Biological Sciences with at least 45% marks</td>
-											       <td>30</td>
-											   <!--  <td><i class='fa fa-inr'></i>30000/-</td>-->
-										      </tr>
-										    																	</tbody></table>
-                                <button class="flashButton" style="
-    padding-top: 3px;
-    height: 12%;
-    padding-bottom: 7px;
-    margin-top: 25px;"><a href="https://www.starexuniversity.com/admission/"> Apply Now</a></button>
-								 					     	 								</div>
-							</div>
-						</div>
-
+					<div class="col-sm-12">
+						<p>The faculty at the School of Life Sciences aims to raise professionals with a problem solving
+							attitude to improve life with Sciences. The purpose is to develop institutional linkages and
+							implement effective management systems for the promotion and development of Core Botany,
+							Core Zoology, Advanced Biotechnology , Advanced Microbiology. The career options other than
+							teaching include research, Scientists in IARI, NDRI, CCMB, ISRO, BARC, PUSA, CDRI, BSIR,
+							TIFR, CSIR and TISCO and all such concerns. Students can also be Forest Officers, Forensic
+							Officers Environmentalists, Clinical researchers, Veterinary technologists, Wild Life
+							educators/rehabilitators, botanical Garden keeper, Herbal Garden Keeper, Zoologists
+							and&nbsp;Botanists. Microbiologists can work in Dairy industry, Food industry,
+							Pharmaceutical industry, Cosmetic industries, Forensic Scientists etc</p>
 
 					</div>
+					<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                    <ng-container matColumnDef="course">
+                        <th mat-header-cell *matHeaderCellDef> Course</th>
+                        <td mat-cell *matCellDef="let element"> {{element.course}}
+                            <br>
+                            <a href="https://www.starexuniversity.com/uploads/Course_Syllabus/Bachelor_in_Pharmacy1.pdf"
+                                target="_blank"><span> <i class="fa fa fa-file-pdf-o" style="color: #820a0e;
+    font-weight: bold;
+    font-size: 18px;
+    margin-right: 6px;
+    position: relative;
+    top: 4px;"></i>Download Syllabus</span></a>
+                        </td>
+                    </ng-container>
+
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="duration">
+                        <th mat-header-cell *matHeaderCellDef> Duration </th>
+                        <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
+                    </ng-container>
+
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="criteria">
+                        <th mat-header-cell *matHeaderCellDef> Eligibility Criteria </th>
+                        <td mat-cell *matCellDef="let element"> {{element.criteria}} </td>
+                    </ng-container>
+
+                    <!-- Symbol Column -->
+                    <ng-container matColumnDef="seats">
+                        <th mat-header-cell *matHeaderCellDef> No. of Seats </th>
+                        <td mat-cell *matCellDef="let element"> {{element.seats}} </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
 				</div>
-			</div>
-			<!-- <div class="col-md-4 order-md-1">
-				<div class="row   m-0 p-0">
-					<div class="col-12 m-0 p-0">
-					   
-						<ul class="leftnav">
-
-						
-                       
-                        <li><a class="" href="https://www.starexuniversity.com/academics/Agriculture-Science">Agriculture Science</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Commerce-Management">Commerce & Management</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Physical-Sciences">Physical Sciences</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Computer-Science-Technology">Computer Science & Technology </a></li><li><a class="" href="https://www.starexuniversity.com/academics/engineering-and-technologys">Engineering & Technology</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Pharmaceutical-Science">Pharmaceutical Science </a></li><li><a class="" href="https://www.starexuniversity.com/academics/Hotel-Management">Hotel Management</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Humanities">Humanities</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Law">Law</a></li><li><a class="active" href="https://www.starexuniversity.com/academics/Life-Sciences">Life Sciences</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Vocational-Courses">Vocational  Courses</a></li>
-                         
-					 
-				</ul>
-					</div>
-				</div>
-
-							</div> -->
-
-
-		</div>
 	</div>
-</section>
