--- a/src/app/school_list/pharmacy/pharmacy.scss
+++ b/src/app/school_list/pharmacy/pharmacy.scss
@@ -12,3 +12,13 @@ table {
     padding-bottom: 10px;
     font-weight: 700;
 }
+a{
+     color: #284fa7;
+}
+p{
+  line-height: 1.8;
+    font-size: 18px;
+    color: #3C3D3E;
+    letter-spacing: .2px;
+    font-family: Lato, sans-serif;
+}
