--- a/src/app/school_list/physical-science/physical-science.scss
+++ b/src/app/school_list/physical-science/physical-science.scss
@@ -1,9 +1,22 @@
 table {
   width: 100%;
 }
+a{
+     color: #284fa7;
+}
+p{
+  line-height: 1.8;
+    font-size: 18px;
+    color: #3C3D3E;
+    letter-spacing: .2px;
+    font-family: Lato, sans-serif;
+}
 .container{
     margin:0 1rem;
-
+    img{
+      width:100%;
+      height: 100%;
+    }
 }
 .contentTitle{
     text-transform: uppercase;
@@ -12,3 +25,25 @@ table {
     padding-bottom: 10px;
     font-weight: 700;
 }
+/* sketch-flex.component.css */
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+.flex_L50{
+  width:50%
+}
+/* Small devices (phones, ≥576px) */
+@media (max-width: 575.98px) {
+  .flex-column-S {
+    flex-direction: column;
+  }
+.flex_S100{
+  width:100%
+}
+}
+
