--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,12 +17,38 @@ body {
 }
 a{
     text-decoration: none;
-    color: white;
 }
-:root {
-  --primary: #ec994b;
-  --white: #ffffff;
-  --bg: #f5f5f5;
+.mat-expansion-panel{
+  margin-top:1rem !important;
+}
+/* Extra small devices (phones, <576px) */
+@media (max-width: 575.98px) {
+  /* Your styles here */
+}
+
+/* Small devices (phones, ≥576px) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  /* Your styles here */
+}
+
+/* Medium devices (tablets, ≥768px) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  /* Your styles here */
+}
+
+/* Large devices (laptops, ≥992px) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  /* Your styles here */
+}
+
+/* Extra large devices (desktops, ≥1200px) */
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+  /* Your styles here */
+}
+
+/* XXL devices (ultra-wide screens, ≥1400px) */
+@media (min-width: 1400px) {
+  /* Your styles here */
 }
 
 html {
@@ -31,6 +57,12 @@ html {
   scroll-behavior: smooth;
 }
 
+.mat-mdc-menu-panel{
+min-width:100vw !important;
+max-width: 100% !important;
+margin-top:1.1rem;
+background-color: #134080e6 !important;
+}
 @media (min-width: 1440px) {
   html {
     zoom: 1.5;
